apps/backstage/overlays/pi4-cluster/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    backstage.io/kubernetes-namespace: backstage
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
    goldilocks.fairwinds.com/enabled: "true"
    name: backstage
  name: backstage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
  name: backstage
  namespace: backstage
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: http-backend
    port: 7007
    targetPort: http-backend
  selector:
    app: backstage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backstage-secrets
        image: ghcr.io/jamesatintegratnio/backstage-backend:latest
        name: backstage-backend
        ports:
        - containerPort: 7007
          name: http-backend
        resources:
          limits:
            cpu: 1500m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /app/users.yaml
          name: org-yaml
          subPath: org.yaml
        - mountPath: /app/app-config.yaml
          name: app-config
          subPath: app-config.yaml
      - envFrom:
        - secretRef:
            name: backstage-frontend-secrets
        image: ghcr.io/jamesatintegratnio/backstage-app:latest
        name: backstage-app
        ports:
        - containerPort: 3000
          name: http
        resources:
          limits:
            cpu: 1500m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /usr/share/nginx/html/app-config.yaml
          name: app-config
          subPath: app-config.yaml
      imagePullSecrets:
      - name: ghcr-login-secret
      serviceAccountName: backstage
      volumes:
      - name: org-yaml
        secret:
          secretName: backstage-org-yaml
      - name: app-config
        secret:
          secretName: backstage-app-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
  name: backstage
  namespace: backstage
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              name: http
        path: /
        pathType: Prefix
  - host: backstage-backend.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              name: http-backend
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - backstage.k8s.integratn.tech
    - backstage-backend.k8s.integratn.tech
    secretName: backstage-tls
